# workshop_ws

./: .gitignore  README.md
src/vision/vision_msgs/: CMakeLists.txt  package.xml
src/vision/vision_msgs/msg/: BoundingBox.msg
src/workshop_interfaces/: CMakeLists.txt  package.xml
src/workshop_main/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/workshop_main/include/workshop_main/: minimal_client.hpp  minimal_publisher.hpp  minimal_server.hpp  minimal_subscriber.hpp
src/workshop_main/launch/: pub_sub_launch.py  server_client_launch.py
src/workshop_main/src/: minimal_client.cpp  minimal_publisher.cpp  minimal_server.cpp  minimal_subscriber.cpp
src/workshop_main/workshop_main/: minimal_publisher.py  minimal_subscriber.py
src/workshop_service/: package.xml  setup.cfg  setup.py
src/workshop_service/workshop_service/: client_member_function.py  service_member_function.py
